# arhelk-armenian

./: README.md  arhelk-armenian.cabal  stack.yaml
.stack-work/install/x86_64-linux/lts-3.10/7.10.2/flag-cache/: arhelk-armenian-0.1.0.0-035214da65fb60e1c99e7c34e72f44d9  arhelk-core-0.1.0.0-5963e7febae54985d0793b054df8ce2a
.stack-work/install/x86_64-linux/lts-3.10/7.10.2/lib/x86_64-linux-ghc-7.10.2/arhelk-armenian-0.1.0.0-5l4tN5K8mLn1X8xpt1McF3/Arhelk/Armenian/: Lemma.dyn_hi
.stack-work/install/x86_64-linux/lts-3.10/7.10.2/lib/x86_64-linux-ghc-7.10.2/arhelk-armenian-0.1.0.0-5l4tN5K8mLn1X8xpt1McF3/Arhelk/Armenian/Lemma/: Adjective.hi  Common.dyn_hi  Particle.dyn_hi
.stack-work/install/x86_64-linux/lts-3.10/7.10.2/lib/x86_64-linux-ghc-7.10.2/arhelk-armenian-0.1.0.0-5l4tN5K8mLn1X8xpt1McF3/Arhelk/Armenian/Lemma/Data/: Adjective.dyn_hi  Adverb.dyn_hi  Adverb.hi  Common.dyn_hi  Particle.dyn_hi  Particle.hi  Root.dyn_hi  Substantive.hi  Verb.dyn_hi  Verb.hi
.stack-work/install/x86_64-linux/lts-3.10/7.10.2/lib/x86_64-linux-ghc-7.10.2/arhelk-armenian-0.1.0.0-AG4g0FK9CpH0Gm0CoijuoU/Arhelk/Russian/: Lemma.dyn_hi  Lemma.hi
.stack-work/install/x86_64-linux/lts-3.10/7.10.2/lib/x86_64-linux-ghc-7.10.2/arhelk-armenian-0.1.0.0-AG4g0FK9CpH0Gm0CoijuoU/Arhelk/Russian/Lemma/: Adjective.dyn_hi  Adjective.hi  Adverb.dyn_hi  Adverb.hi  Common.dyn_hi  Common.hi  Data.dyn_hi  Data.hi  Particle.dyn_hi  Particle.hi  Substantive.dyn_hi  Substantive.hi  Verb.dyn_hi  Verb.hi
.stack-work/install/x86_64-linux/lts-3.10/7.10.2/lib/x86_64-linux-ghc-7.10.2/arhelk-armenian-0.1.0.0-AG4g0FK9CpH0Gm0CoijuoU/Arhelk/Russian/Lemma/Data/: Adjective.dyn_hi  Adjective.hi  Adverb.dyn_hi  Adverb.hi  Common.dyn_hi  Common.hi  Particle.dyn_hi  Particle.hi  Substantive.dyn_hi  Substantive.hi  Verb.dyn_hi  Verb.hi
.stack-work/install/x86_64-linux/lts-3.10/7.10.2/lib/x86_64-linux-ghc-7.10.2/arhelk-core-0.1.0.0-HhwYrYJeeT8CiA1Ohagz9Z/Arhelk/Core/: Rule.dyn_hi  Rule.hi
.stack-work/install/x86_64-linux/lts-3.10/7.10.2/pkgdb/: arhelk-armenian-0.1.0.0-27d67bc605140e9c96bf39a7616d584e.conf  arhelk-core-0.1.0.0-5963e7febae54985d0793b054df8ce2a.conf  package.cache
config/: particles.txt
src/Arhelk/Armenian/: Lemma.hs
src/Arhelk/Armenian/Lemma/: Adjective.hs  Adverb.hs  Common.hs  Data.hs  Particle.hs  Substantive.hs  Verb.hs
src/Arhelk/Armenian/Lemma/Data/: Adjective.hs  Adverb.hs  Common.hs  Particle.hs  Root.hs  Substantive.hs  Verb.hs
test/: Spec.hs
test/Test/Arhelk/Armenian/: Lemma.hs
