name:                arhelk-armenian
version:             0.1.0.0
synopsis:            Plugin for Arhelk system for Armenian language.
description:         Please see README.md
homepage:            https://github.com/Teaspot-Studio/arhelk-armenian
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha <ncrashed@gmail.com>, Oganyan Levon <lemarwin42@gmail.com>
maintainer:          ncrashed@gmail.com
copyright:           2015 © Teaspot Studio
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
                      Arhelk.Armenian.Lemma
                      Arhelk.Armenian.Lemma.Adjective
                      Arhelk.Armenian.Lemma.Adverb
                      Arhelk.Armenian.Lemma.Common
                      Arhelk.Armenian.Lemma.Particle
                      Arhelk.Armenian.Lemma.Data
                      Arhelk.Armenian.Lemma.Data.Adjective
                      Arhelk.Armenian.Lemma.Data.Adverb
                      Arhelk.Armenian.Lemma.Data.Common
                      Arhelk.Armenian.Lemma.Data.Particle
                      Arhelk.Armenian.Lemma.Data.Substantive
                      Arhelk.Armenian.Lemma.Data.Verb
                      Arhelk.Armenian.Lemma.Substantive
                      Arhelk.Armenian.Lemma.Verb
                      Arhelk.Armenian.Lemma.Data.Root

  build-depends:       base >= 4.7 && < 5
                     , arhelk-core
                     , lens-simple
                     , mtl
                     , text
                     , text-show

  default-language:    Haskell2010
  default-extensions:  
                       DeriveFunctor
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       OverloadedStrings
                       RankNTypes
                       TemplateHaskell
                       ScopedTypeVariables
                       RecordWildCards

test-suite arhelk-armenian-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , arhelk-core
                     , arhelk-armenian
                     , HUnit
                     , QuickCheck
                     , quickcheck-instances
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , text
                     , text-show
                     
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  other-modules:       Test.Arhelk.Armenian.Lemma

source-repository head
  type:     git
  location: https://github.com/Teaspot-Studio/arhelk-russian.git